# obsidian-voice-bridge

./: .gitignore  CMakeLists.txt  README.md  build_and_test.sh  requirements.txt
include/: audio_handler.hpp  coqui_engine.hpp  text_processor.hpp  tts_bridge.hpp
src/: audio_handler.cpp  coqui_engine.cpp  text_processor.cpp  tts_bridge.cpp  tts_server.py
tests/: test_config.py  test_tts_bridge.py
